add types in shared
